# fastapi-ml-api

./: .gitignore  README.md  product.db  pyproject.toml  requirements.txt
product/: config.py  database.py  main.py  models.py  schemas.py
product/routers/: login.py  product.py  seller.py
