[project]
name = "fastapi-ml-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt<4.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
